# sunrise

./: README.md
.github/workflows/: continuos_integration.yml
backend/: .dockerignore  Dockerfile  Makefile  alembic.ini  docker-compose.yaml  entrypoint.sh  pyproject.toml
backend/src/: api.py  settings.py
backend/src/application/dto/: __init__.py  mood_dto.py  user_dto.py
backend/src/application/exceptions/: __init__.py  sql_database.py
backend/src/application/ports/repositories/: __init__.py  mood_repository.py  user_repository.py
backend/src/application/use_cases/: __init__.py  create_user.py  get_current_user.py  get_users.py  login.py  mood.py  update_user.py  users.py
backend/src/domain/entities/: __init__.py  associated_emotion.py  emotional_trigger.py  mood.py  user.py
backend/src/domain/exceptions/: __init__.py  mood_exceptions.py  user_exceptions.py
backend/src/domain/services/: jwt_token.py  password.py
backend/src/infrastructure/database/: orm.py  session.py
backend/src/infrastructure/repositories/: mood_repository.py  user_repository.py
backend/src/interfaces/http/: dependencies.py
backend/tests/: conftest.py
backend/tests/application/: test_create_user.py  test_get_current_user.py  test_get_users.py  test_login.py  test_mood_use_cases.py  test_update_user.py  test_users_use_cases.py
backend/tests/domain/: test_associated_emotion.py  test_mood_entity.py  test_user_entity.py
backend/tests/infrastructure/: test_user_repository.py
backend/tests/interface/: test_auth_controller.py  test_mood_controller.py  test_user_controller.py
(+9 files in other folders)
